styles.css
* {
    padding: 0;
    margin: 0;
    font-size: 10px;
    --card-size: 10vw;
}

.root {
    font-family: 'Roboto';
}

section,header,footer, .inspirational {
    padding: 0 16rem 0 16rem;
}

body {
    width: 100vw;
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    justify-content:space-between
}

h2 {
    margin-top: 4rem;
    margin-bottom: 4rem;
    font-size: 3.6rem;
    font-weight: extra-bold;
    text-align: center;
}

a:any-link {
    text-decoration: none;
    color: #E5E7EB;
    font-size: 18px;
}

header {
    flex: 1;
    background-color: #1F2937;
    padding-top: 1.2rem;
    padding-bottom: 1.2rem;
    font-size: 24px;
    color: #F9FAF8;
    display: flex;
    justify-content: space-between;
}

footer {
    flex: 1;
    background-color: #1F2937;
    color: #E5E7EB;
    justify-self: flex-end;
}

footer p {
    padding: 1.2rem;
    font-size: 2rem;
    text-align: center;
}

.header-links {
    display: flex;
    color: #E5E7EB;
    gap: 2rem;
}

/*--- Hero Section ---*/
.hero {
    flex: 1;
    padding-top: 6rem;
    padding-bottom: 6rem;
    background-color: #1F2937;
    display: flex;
    gap: 2rem;
}

.hero-left-side {
    flex: 1;
    min-width: 300px;
    display: flex;
    flex-direction: column;
    gap: 3rem;
    justify-content: center;
    text-align: left;
    align-items: flex-start;
    color: #F9FAF8;
    font-size: 48px;
    font-weight: bolder;
}

.hero-left-side p {
    color:#E5E7EB;
    margin: 1rem 0 1rem 0;
    font-size: 2.4rem;
}

.hero-right-side {
    align-self: flex-start;
    width: 50%;
    min-width: 20vw;
    height: auto;
    flex: 1;
    color: #F9FAF8;
    border: 0.4rem solid #F9FAF8;
    border-radius: 2rem;
    background-color: #e5e7eb87;
}

a.signup {
    margin-top: 1rem;
    background-color: #3882F6;
    width: max-content;
    border-radius: 1rem;
    padding: 0.75rem 3rem 0.75rem 3rem;
    text-align: center;
    font-size: 24px;
    font-weight: 900;
}

/*--- Card Container ---*/
.card-container {
    flex: 1;
    margin: 4rem 0 4rem 0;
    display: flex;
    width: 100%;
    min-height: var(--card-size);
    justify-content: center;
    gap: 4rem;
}

.card {
    /*-- Flex Properties --*/
    display: flex;
    flex-direction: column;
    align-content: center;
}

.card-picture {
    /*-- Card Propterties --*/
    min-width: var(--card-size);
    max-width: var(--card-size);
    min-height: var(--card-size);
    max-height: var(--card-size);
    align-self: stretch;
    object-fit: cover;
    border: 0.5rem solid #3882F6;
    border-radius: 2rem;
    background-color: #3881f611;
    box-shadow: 
            0.3rem 0.3rem 3rem 3rem #1f293729,
            0.3rem 0.3rem 0.5rem #1f29375f;
}

.card p {
    max-width: var(--card-size);
    text-align: center;
    color: #1f2937e7;
    font-size: 2rem;
    padding: 0.4rem;
}

/*--- Inspiration Quote --- */
.inspirational {
    flex: 1;
    padding-bottom: 4rem;
    padding-top: 4rem;
    background-color: #E5E7EB;
    display: flex;
    flex-direction: column;
}

.inspirational p {

    color: #1F2937;
    font-style: italic;
    font-size: 36px;
}

.inspirational .author {
    text-align: end;
    font-weight: 700;
    font-size: 24px;
}

/*--- Call to Action! ---*/
.action-container {
    flex: 1;
    margin-top: 2rem;
    margin-bottom: 2rem;
    background-color: #3882F6;
    border-radius: 1rem;
    padding: 3rem 4rem 3rem 4rem;
    display: flex;
    gap: 2rem;
    justify-content: center;
    align-items: center;
}

.action-container h2 {
    color: #E5E7EB;
    margin: 0;
    text-align: start;
    font-size: 2.6rem;
    font-weight: 700;
}

.action-container p {
    color: #E5E7EB;
    font-size: 2.0rem;
    text-align: start;
}

.action-container a {
    margin-top: 1rem;
    background-color: #3882F6;
    width: max-content;
    border-radius: 1rem;
    border: 0.2rem solid #E5E7EB;
    padding: 0.75rem 3rem 0.75rem 3rem;
    text-align: center;
    align-self: center;
    color: #E5E7EB;
    font-size: 24px;
    font-weight: 900;
}

